--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,61 @@
-body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 34px;
-  color: #777;
-  background: url("../images/concrete_seamless.png");
-}
-
 * {
   box-sizing: border-box;
 }
 
+body {
+  background: url("../images/concrete_seamless.png");
+  color: #777;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+}
+
 /* general */
 
+a {
+  color: lightseagreen;
+}
+
+a:hover {
+  color: #666;
+}
+
+
 .container {
-  width: 100%;
+  clear: both;
   max-width: 960px;
   margin: 0 auto;
-  clear: both;
+  width: 100%;
+}
+
+.fab {
+  border-radius: 50%;
+  color: lightseagreen;
+  font-size: 25px;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  width: 20px;
+}
+
+h1 {
+  border-bottom: 3px solid #ddd;
+  font-size: 30px;
+  line-height: 49px;
+  padding-bottom: 20px;
+}
+
+h2,
+h3 {
+  font-size: 22px;
+}
+
+h1,
+h2,
+h3 {
+  color: #4aaaa5;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
 }
 
 h1,
@@ -30,51 +69,31 @@ p:last-child {
   margin-bottom: 0;
 }
 
-h1,
-h2,
-h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-weight: 700;
-  color: #4aaaa5;
-}
-
-h1 {
-  padding-bottom: 20px;
-  font-size: 30px;
-  line-height: 49px;
-  border-bottom: 3px solid #ddd;
-}
-
-h2,
-h3 {
-  font-size: 22px;
-}
-
 /* header */
 
-#masthead {
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  margin: 0 0 30px;
-  overflow: auto;
-  color: #fff;
-  background: #fff;
-  border-bottom: 2px solid #ccc;
-}
-
 #logo {
+  background: #4aaaa5;
+  color: #fff;
   float: left;
-  width: 250px;
-  height: 90px;
   font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
   font-weight: 700;
+  height: 90px;
   line-height: 90px;
-  color: #fff;
   text-align: center;
   text-decoration: none;
-  background: #4aaaa5;
+  width: 250px;
+}
+
+#masthead {
+  background: #fff;
+  border-bottom: 2px solid #ccc;
+  color: #fff;
+  margin: 0 0 30px;
+  overflow: auto;
+  position: fixed;
+  width: 100%;
+  z-index: 99;
 }
 
 nav {
@@ -83,13 +102,13 @@ nav {
 }
 
 nav a {
-  display: inline-block;
-  padding-left: 15px;
-  margin-left: 15px;
-  line-height: 18px;
-  color: #999;
-  text-decoration: none;
   border-left: 1px solid #efefef;
+  color: #999;
+  display: inline-block;
+  line-height: 18px;
+  margin-left: 15px;
+  padding-left: 15px;
+  text-decoration: none;
 }
 
 nav a:first-child {
@@ -99,91 +118,109 @@ nav a:first-child {
 /* footer */
 
 footer {
-  padding: 30px 0;
-  clear: both;
-  font-size: 12px;
-  color: #fff;
-  color: #ccc;
-  text-align: center;
   background: #666;
   border-top: 8px solid #4aaaa5;
+  clear: both;
+  color: #fff;
+  color: #ccc;
+  font-size: 12px;
   height: 50px;
+  padding: 30px 0;
+  text-align: center;
 }
 
 h3, h2 {
-  padding-bottom: 20px;
-  margin-bottom: 15px;
-  line-height: 22px;
   border-bottom: 2px solid #eee;
+  line-height: 22px;
+  margin-bottom: 15px;
+  padding-bottom: 20px;
 }
 
 /* main */
 
 #main-container {
-  padding-top: 130px;
   min-height: calc(100vh - 70px);
+  padding-top: 130px;
 }
 
 .main-section {
-  float: left;
-  width: 100%;
-  max-width: 960px;
-  padding: 30px;
-  margin: 0 0 40px;
   background: #fff;
   border: 1px solid #ddd;
+  float: left;
+  margin: 0 0 40px;
+  max-width: 960px;
+  padding: 30px;
+  width: 100%;
 }
 
 /* portfolio page */
 
-.work {
-  position: relative;
+.auth-image {
   float: left;
-  width: 274px;
+  height: auto;
+  margin-right: 25px;
+  margin-top: 10px;
+  width: 200px;
+}
+
+.work {
+  float: left;
   margin: 20px 0 25px;
   overflow: auto;
+  position: relative;
+  width: 274px;
+}
+
+.work h3 {
+  background: #4aaaa5;
+  border-bottom: 0;
+  bottom: 20px;
+  color: #fff;
+  font-weight: 300;
+  line-height: 30px;
+  margin-bottom: 0;
+  padding: 15px;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
+.work img {
+  border: 0 none;
+  opacity: 0.8;
+  width: 100%;
 }
 
 .work:nth-child(even) {
   margin-right: 40px;
 }
 
-.work img {
-  width: 100%;
-  border: 0 none;
-  opacity: 0.8;
-}
-
-.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 0;
-  font-weight: 300;
-  line-height: 30px;
-  color: #fff;
-  text-align: center;
-  background: #4aaaa5;
-  border-bottom: 0;
-}
-
-.auth-image {
-  float: left;
-  width: 200px;
-  height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
-}
-
 /* contact page */
+
+#contact-form li {
+  margin-bottom: 10px;
+}
 
 #contact-form ul {
   margin-bottom: 20px;
 }
 
-#contact-form li {
-  margin-bottom: 10px;
+input[type=submit] {
+  background: #4aaaa5;
+  border: 0 none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 10px 30px;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  border: 1px solid #ddd;
+  font-size: 14px;
+  height: 35px;
+  padding: 0 10px;
 }
 
 label,
@@ -194,24 +231,6 @@ textarea {
   width: 100%;
 }
 
-input[type=text],
-input[type=email],
-textarea {
-  height: 35px;
-  padding: 0 10px;
-  font-size: 14px;
-  border: 1px solid #ddd;
-}
-
 textarea {
   height: 200px;
-}
-
-input[type=submit] {
-  padding: 10px 30px;
-  font-size: 18px;
-  color: #fff;
-  cursor: pointer;
-  background: #4aaaa5;
-  border: 0 none;
 }
