--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 body {
   background: url("../images/concrete_seamless.png");
   color: #777;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Quattrocento Sans', sans-serif;
   font-size: 18px;
   line-height: 34px;
 }
@@ -54,7 +54,7 @@ h1,
 h2,
 h3 {
   color: #4aaaa5;
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: 'Quattrocento Sans', sans-serif;
   font-weight: 700;
 }
 
@@ -75,7 +75,7 @@ p:last-child {
   background: #4aaaa5;
   color: #fff;
   float: left;
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: 'Quattrocento Sans', sans-serif;
   font-size: 30px;
   font-weight: 700;
   height: 90px;
