--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,16 @@ h3, h2 {
   width: 100%;
 }
 
+.skills {
+  border-radius: 50%;
+  color: lightseagreen;
+  font-size: 50px;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  width: 20px;
+}
+
 /* portfolio page */
 
 .auth-image {
